rubyfullstack/course4/module2/css/styles.css
body {
	padding: 10px;
}
h1 {
	text-align: center;
}
h2 {
	float: right;
	border: solid black;
	border-width: 0px 0px 1px 1px;
	padding: 10px;
	margin: 0;
	width: 50%;
	text-align: center;
}

p {
	margin: 60px 10px 10px 10px;
}

div.center {
	margin: 0 auto;
}

section {
	border: 1px solid black;
	overflow: auto;
	width: 30%;
	display: inline-block;
	margin: 10px;
	

}

.section1Color {
	background-color: green;
}

.section2Color {
	background-color: red;
}

.section3Color {
	background-color: blue;
}

